updated yml file to add updates on stg_payments and change source for stripe.payments

--- a/models/staging/jaffle_shop/src_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/src_jaffle_shop.yml
@@ -6,3 +6,7 @@ sources:
     tables:
       - name: customers
       - name: orders
+  - name: stripe
+    database: raw
+    tables:
+      - name: payment
