--- a/models/staging/jaffle_shop/src_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/src_jaffle_shop.yml
@@ -2,17 +2,22 @@ version: 2
 
 sources:
   - name: jaffle_shop
+    description: a clone of a Postgres application database
     database: raw
     tables:
       - name: customers
+        description: the raw customers data
         columns:
           - name: id
+            description: the primary key for the raw customers data
             tests: 
               - unique
               - not_null
       - name: orders
+        description: the raw orders data
         columns:
           - name: id
+            description: the primary key for the raw orders data
             tests: 
               - unique
               - not_null      
@@ -21,6 +26,8 @@ sources:
           warn_after: {count: 12, period: hour}
           error_after: {count: 24, period: hour}
   - name: stripe
+    description: Database containing the payments made via stripe
     database: raw
     tables:
       - name: payment
+        description: contains the details of the payments done via stripe
